# uperf-linux

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
.monkeycode/specs/architecture-v2/: design.md  requirements.md  tasklist.md
config/: dbus-interface.xml  org.uperflinux.Daemon.conf  org.uperflinux.policy  perapp_powermode  sm8550.json
gui/: CMakeLists.txt  main.c  main.cpp  uperf-gui.desktop
gui/include/: dbus_proxy.h
gui/qml/: Main.qml
gui/qml/components/: PowerModeButton.qml  SliderWithLabel.qml
gui/qml/pages/: Dashboard.qml  Games.qml  Logs.qml  Settings.qml
gui/src/: dbus_proxy.c
packaging/debian/: conffiles  control  control-daemon  control-gui  postinst  postinst-daemon  postinst-gui  postrm  prerm  prerm-daemon  rules
packaging/debian/source/: format
src/: cgroup_manager.c  cli.c  config_parser.c  config_wizard.c  dbus_interface.c  frequency_controller.c  frequency_state.c  game_scanner.c  heavyload_detector.c  input_monitor.c  log.c  main.c  perapp_config.c  power_model.c  state_machine.c  sysfs_writer.c  task_scheduler.c  thermal.c
src/include/: cgroup_manager.h  config.h  dbus_interface.h  frequency_controller.h  frequency_state.h  game_scanner.h  heavyload_detector.h  input_monitor.h  log.h  perapp_config.h  power_model.h  state_machine.h  sysfs_writer.h  task_scheduler.h  thermal.h
systemd/: uperf-linux.service
tests/: test_cgroup_manager.c  test_config_file.c  test_config_parser.c  test_dbus_interface.c  test_frequency_controller.c  test_frequency_state.c  test_game_scanner.c  test_heavyload_detector.c  test_input_monitor.c  test_perapp_config.c  test_power_model.c  test_state_machine.c  test_sysfs_writer.c  test_task_scheduler.c  test_thermal.c
